<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/prefs_service"
        android:title="@string/prefs_service">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_enable"
            android:title="@string/pref_enable" />
    </PreferenceCategory>
    <PreferenceCategory
        android:dependency="pref_enable"
        android:key="prefs_general"
        android:title="@string/prefs_modes">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_wave_mode"
            android:summary="@string/pref_wave_mode_summary"
            android:title="@string/pref_wave_mode" />
        <ListPreference
            android:defaultValue="2"
            android:dependency="pref_wave_mode"
            android:entries="@array/number_of_waves_entries"
            android:entryValues="@array/number_of_waves_values"
            android:key="pref_number_of_waves"
            android:summary="@string/pref_number_of_waves_summary"
            android:title="@string/pref_number_of_waves" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_pocket_mode"
            android:summary="@string/pref_pocket_mode_summary"
            android:title="@string/pref_pocket_mode" />
    </PreferenceCategory>
    <PreferenceCategory
        android:dependency="pref_enable"
        android:key="@string/prefs_general"
        android:title="@string/pref_lock_screen">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_lock_screen"
            android:summary="@string/pref_lock_screen_mode_summary"
            android:title="@string/pref_lock_screen" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pref_lock_screen"
            android:key="pref_lock_screen_when_landscape"
            android:summary="@string/pref_lock_screen_when_landscape_summary"
            android:title="@string/pref_lock_screen_when_landscape" />
        <ListPreference
            android:defaultValue="1000"
            android:dependency="pref_lock_screen"
            android:entries="@array/sensor_cover_time_entries"
            android:entryValues="@array/sensor_cover_time_values"
            android:key="pref_sensor_cover_time_before_locking_screen"
            android:summary="@string/pref_sensor_cover_time_before_locking_screen_summary"
            android:title="@string/pref_sensor_cover_time_before_locking_screen" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pref_lock_screen"
            android:key="pref_lock_screen_vibrate_on_lock"
            android:summary="@string/pref_lock_screen_vibrate_on_lock_summary"
            android:title="@string/pref_lock_screen_vibrate_on_lock" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pref_lock_screen"
            android:key="pref_lock_screen_with_power_button_as_root"
            android:summary="@string/pref_lock_screen_with_power_button_as_root_summary"
            android:title="@string/pref_lock_screen_with_power_button_as_root" />
    </PreferenceCategory>
</PreferenceScreen>